fix event list spacing

--- a/themes/repair-cafe/assets/sass/components/_eventlist.scss
+++ b/themes/repair-cafe/assets/sass/components/_eventlist.scss
@@ -1,5 +1,5 @@
 .eventlist {
     .logo {
-        width: 120px;
+        width: 25%;
     }
 }
